--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset='utf-8'>
-    <title>My first HomePage</title>
+    <meta charset="utf-8" />
+    <title>React App</title>
+    <script src="./dist/build.js"></script>
+    <link rel="stylesheet" href="./web/css/index.css">
+    <link rel="stylesheet" href="./web/css/Layout.css">
+    <link rel="stylesheet" href="./web/css/Draw.css">
+    <link rel="stylesheet" href="./web/css/SideNavigation.css">
+    <link rel="stylesheet" href="./web/css/Profile.css">
   </head>
   <body>
-    My first HomePage
+    <div id="root"></div>
   </body>
 </html>
