--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
     <script src="./dist/build.js"></script>
     <link rel="stylesheet" href="./web/css/index.css">
     <link rel="stylesheet" href="./web/css/Layout.css">
+    <link rel="stylesheet" href="./web/css/Auth.css">
+    <link rel="stylesheet" href="./web/css/Topbar.css">
     <link rel="stylesheet" href="./web/css/Draw.css">
     <link rel="stylesheet" href="./web/css/SideNavigation.css">
     <link rel="stylesheet" href="./web/css/Profile.css">
+    <link rel="stylesheet" href="./web/css/MyCanvas.css">
   </head>
   <body>
     <div id="root"></div>
